--- a/src/scss/_activeVaults.scss
+++ b/src/scss/_activeVaults.scss
@@ -25,7 +25,7 @@
   &__list {
     h6 {
       font-size: 16px;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
       margin-bottom: 0px;
       font-family: 'Poppins-Medium';
     }
