--- a/src/scss/_amountPanel.scss
+++ b/src/scss/_amountPanel.scss
@@ -36,7 +36,7 @@
   }
   .table th {
     padding-bottom: 0.5rem;
-    color: #4c646f;
+    color: var(--unnamed-color-3c4760);
     font-weight: 400;
     font-size: 12px;
   }
