--- a/src/scss/_archivedPairCard.scss
+++ b/src/scss/_archivedPairCard.scss
@@ -51,7 +51,7 @@
     border-bottom: 1px solid rgba(#4c646f, 0.2);
     h6 {
       font-size: 16px;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
       margin-bottom: 0px;
       font-family: 'Poppins-Medium';
     }
