--- a/src/scss/_instabuylp.scss
+++ b/src/scss/_instabuylp.scss
@@ -5,6 +5,6 @@
   h3 {
     font-family: 'Poppins-Medium';
     font-size: 24px;
-    color: #3c4760;
+    color: var(--unnamed-color-3c4760);
   }
 }
