--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -10,16 +10,23 @@
     padding: 2.5rem 1.5rem;
     height: auto;
   }
-  a {
-    img {
+  &__social {
+    a {
+      margin-left: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
       border: 1px solid rgba(var(--secondary-border), 0.3);
       border-radius: 8px;
-      margin: 0px 3px;
+      margin-bottom: 0px;
     }
   }
+
   h6 {
     font-family: 'Poppins-Light';
-    color: var(--link-color);
+    color: var(--unnamed-color-727c81);
     font-size: 12px;
   }
   .list-group {
@@ -35,7 +42,7 @@
       padding-left: 0px;
     }
     a {
-      color: var(--link-color);
+      color: var(--unnamed-color-727c81);
       font-size: 14px;
       font-family: 'Poppins-Light';
     }
