--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -1,5 +1,5 @@
 .tokenpaircard {
-  border: 1px solid rgba(#4c646f, 0.2);
+  border: 1px solid rgba(var(--secondary-border), 0.2);
   border-radius: 8px;
   .insta-buy-lp {
     font-family: 'Poppins-Medium';
@@ -26,19 +26,19 @@
     h6 {
       font-family: 'Poppins-SemiBold';
       font-size: 1rem;
-      color: #002332;
+      color: var(--unnamed-color-002332);
     }
     p {
       font-family: 'Poppins-Regular';
       font-size: 12px;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
     }
   }
   &__riskBox {
     p {
-      font-family: 'Poppins-Medium';
+      font-family: 'Poppins-Regular';
       font-size: 12px;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
     }
     h6 {
       font-family: 'Poppins-SemiBold';
@@ -63,12 +63,12 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    background-color: #dbe0e2;
+    background-color: var(--primary-border);
     border-top: 1px solid rgba(#4c646f, 0.2);
     border-bottom: 1px solid rgba(#4c646f, 0.2);
     h6 {
       font-size: 16px;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
       margin-bottom: 0px;
       font-family: 'Poppins-Medium';
     }
@@ -84,10 +84,10 @@
     &__content {
       padding: 20px;
       padding-top: 0px;
-      color: #4c646f;
+      color: var(--unnamed-color-4c646f);
       p {
         font-family: 'Poppins-SemiBold';
-        color: #002332;
+        color: var(--unnamed-color-002332);
       }
       &--tokens {
         margin-top: 10px;
@@ -104,8 +104,8 @@
       text-align: center;
       padding-top: 16px;
       padding-bottom: 16px;
-      color: #4c646f;
-      border-top: 1px solid rgba(#4c646f, 0.2);
+      color: var(--unnamed-color-4c646f);
+      border-top: 1px solid rgba(var(--secondary-border), 0.2);
       &:hover {
         text-decoration: underline;
       }
