--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -42,6 +42,7 @@
       font-size: 15px;
       color: white;
       background-image: linear-gradient(to bottom, #5fb5ff, #0f6eff);
+      border: 0px;
     }
   }
 }
