--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -54,6 +54,7 @@
   --unnamed-color-727c81: #727c81;
   --unnamed-color-1B1E29: #1b1e29;
   --unnamed-color-171A23: #171a23;
+  --unnamed-color-f8f9f9: #f8f9f9;
 }
 [data-theme='dark'] {
   --background: #17161f;
@@ -67,7 +68,7 @@
   --unnamed-color-f48c57: #f48c57;
   --unnamed-color-ff69ce: #ff69ce;
   --unnamed-color-bc5cf7: #bc5cf7;
-  --unnamed-color-0f6eff: #0f6eff;
+  --unnamed-color-0f6eff: #ffffff;
   --unnamed-color-5fb5ff: #5fb5ff;
   --unnamed-color-ff3131: #ff3131;
   --unnamed-color-07b127: #07b127;
@@ -75,6 +76,8 @@
   --unnamed-color-727c81: #ffffff;
   --unnamed-color-1B1E29: #1b1e29;
   --unnamed-color-171A23: #171a23;
+  --unnamed-color-f9fbfe: #2a3340;
+  --unnamed-color-f8f9f9: #1b1e29;
 }
 
 [data-theme='light'] {
@@ -96,6 +99,8 @@
   --unnamed-color-ff3131: #ff3131;
   --unnamed-color-07b127: #07b127;
   --unnamed-color-1B1E29: #ffffff;
+  --unnamed-color-f9fbfe: #4e667133;
+  --unnamed-color-f8f9f9: #f8f9f9;
   --unnamed-color-171A23: rgba(255, 224, 226, 0.33);
 }
 
