--- a/src/scss/_vaulthistorytable.scss
+++ b/src/scss/_vaulthistorytable.scss
@@ -30,7 +30,7 @@
     .activity {
       font-family: 'Poppins-SemiBold';
       font-size: 14px;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
     }
     .date {
       font-size: 14px;
