--- a/src/scss/_activeVaults.scss
+++ b/src/scss/_activeVaults.scss
@@ -16,13 +16,30 @@
     margin-bottom: -99999px;
     padding-bottom: 99999px;
   }
-
-  .table td,
-  .table th {
-    border-top: 0px;
+  .lp-button {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.6rem 0.8rem;
+    width: 100%;
   }
-
+  .generate {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.9rem 0rem;
+    width: 100%;
+  }
   &__list {
+    td {
+      border-top: 0px !important;
+    }
+    tr {
+      border-bottom: 1px solid var(--unnamed-color-f9fbfe) !important;
+    }
+    th {
+      border-top: 0px !important;
+      color: var(--unnamed-color-3c4760);
+      border-bottom: 2px solid var(--unnamed-color-f9fbfe) !important;
+    }
     h6 {
       font-size: 16px;
       color: var(--unnamed-color-3c4760);
