--- a/src/scss/_amountPanel.scss
+++ b/src/scss/_amountPanel.scss
@@ -2,7 +2,7 @@
   h4 {
     font-family: 'Poppins-Medium';
     font-size: 18px;
-    color: #3c4760;
+    color: var(--unnamed-color-3c4760);
     margin-top: 2rem;
     margin-left: 1.5rem;
     margin-bottom: 0.5rem;
@@ -11,22 +11,23 @@
   h5 {
     font-family: 'Poppins-SemiBold';
     font-size: 14px;
-    color: #002332;
+    color: var(--unnamed-color-002332);
   }
 
   h6 {
     font-size: 14px;
-    color: #3c4760;
+    color: var(--unnamed-color-3c4760);
   }
 
   .lastToken {
     margin-left: -5px;
+    margin-right: 10px;
   }
 
   table td {
     font-family: 'Poppins-SemiBold';
     font-size: 14px;
-    color: #3c4760;
+    color: var(--unnamed-color-3c4760);
   }
   table td,
   .table th {
@@ -42,9 +43,9 @@
   }
 
   .systemInfo {
-    border-top: 1px solid rgba(#4c646f, 0.2);
+    border-top: 1px solid var(--unnamed-color-f9fbfe);
     margin-top: 2rem;
-    background-color: rgba(#dbe0e2, 0.2);
+    background-color: var(--unnamed-color-f8f9f9);
     padding-top: 2rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -53,6 +54,7 @@
     padding-bottom: 2rem;
     h4 {
       margin: 0px;
+      color: var(--unnamed-color-3c4760);
     }
   }
 }
