--- a/src/scss/_dashboardModal.scss
+++ b/src/scss/_dashboardModal.scss
@@ -11,7 +11,7 @@
     font-size: 15px;
     color: #0f6eff;
     min-width: 112px;
-    border: 2px solid #0f6eff;
+    border: 2px solid var(--unnamed-color-0f6eff);
   }
   &__modal {
     .modal-body {
