--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -42,6 +42,7 @@
     height: 100%;
     background-color: var(--background);
     // opacity: 0.4;
+    border-right: 1px solid var(--unnamed-color-f9fbfe);
   }
   &__connectedBox {
     position: absolute;
