--- a/src/scss/_pricecard.scss
+++ b/src/scss/_pricecard.scss
@@ -1,5 +1,5 @@
 .pricecard {
-  border: 1px solid rgba(#4c646f, 0.2);
+  border: 1px solid var(--unnamed-color-f9fbfe);
   border-radius: 16px;
   @include respond-to(sm) {
     margin-top: 15px;
@@ -13,7 +13,7 @@
     p {
       font-family: 'Poppins-Medium';
       font-size: 18;
-      color: #3c4760;
+      color: var(--unnamed-color-3c4760);
       margin-right: 0.5rem;
     }
   }
@@ -31,23 +31,23 @@
     p {
       font-family: 'Poppins-Regular';
       font-size: 14px;
-      color: #4c646f;
+      color: var(--unnamed-color-4c646f);
     }
   }
   &__body {
     padding: 1.5rem;
-    background-color: #f8f9f9;
+    background-color: var(--unnamed-color-f8f9f9);
     border-top: 1px solid rgba(#4c646f, 0.2);
     border-bottom-right-radius: 16px;
     border-bottom-left-radius: 16px;
     label {
       font-size: 14px;
-      color: #4c646f;
+      color: var(--unnamed-color-4c646f);
     }
     p {
       font-family: 'Poppins-SemiBold';
       font-size: 16px;
-      color: #002332;
+      color: var(--unnamed-color-4c646f);
     }
   }
 }
