--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -78,6 +78,8 @@
   --unnamed-color-171A23: #171a23;
   --unnamed-color-f9fbfe: #2a3340;
   --unnamed-color-f8f9f9: #1b1e29;
+  --unnamed-color-17161f: #17161f;
+  --unnamed-color-bg: #ffffff;
 }
 
 [data-theme='light'] {
@@ -102,6 +104,8 @@
   --unnamed-color-f9fbfe: #4e667133;
   --unnamed-color-f8f9f9: #f8f9f9;
   --unnamed-color-171A23: rgba(255, 224, 226, 0.33);
+  --unnamed-color-bg: rgb(0, 35, 50, 0.4);
+  --unnamed-color-17161f: #ffffff;
 }
 
 // --unnamed-color-002332: #002332;
