--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -173,3 +173,15 @@ input {
 .modal-xl {
   max-width: 480px !important;
 }
+.EXTREME {
+  color: #ff3131 !important;
+}
+.HIGH {
+  color: #ff3131 !important;
+}
+.MEDIUM {
+  color: #f48c57 !important;
+}
+.LOW {
+  color: #07b127 !important;
+}
