--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -46,16 +46,16 @@
       margin-bottom: 0px;
       text-transform: uppercase;
     }
-    .extreme {
+    .EXTREME {
       color: #ff3131;
     }
-    .high {
+    .HIGH {
       color: #ff3131;
     }
-    .medium {
+    .MEDIUM {
       color: #f48c57;
     }
-    .low {
+    .LOW {
       color: #07b127;
     }
   }
