--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,7 +10,7 @@
     padding-right: 10px;
     padding-left: 10px;
     justify-content: space-between;
-    border-bottom: 1px solid #ebecef;
+    border-bottom: 1px solid var(--unnamed-color-f9fbfe);
     img {
       width: 150px;
     }
@@ -64,6 +64,12 @@
     margin-right: 1rem;
     margin-top: 6px;
     cursor: pointer;
+    @include respond-to(sm) {
+      margin-right: 0.3rem;
+      img {
+        width: auto;
+      }
+    }
     &:hover {
       opacity: 0.8;
     }
