--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -31,6 +31,7 @@
 @import './_mobileMenuTrigger';
 @import './walletProviderModal';
 @import './customDropdownInput';
+@import './faucet';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
