--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -74,4 +74,18 @@
       opacity: 0.8;
     }
   }
+  &__faucet {
+    margin-top: 5px;
+    border: none;
+    background-color: #0f6eff;
+    color: white;
+    font-family: 'Poppins-Regular';
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+    text-transform: uppercase;
+    margin-right: 15px;
+    font-size: 14px;
+    height: 40px;
+  }
 }
