--- a/src/scss/_faucet.scss
+++ b/src/scss/_faucet.scss
@@ -1,56 +1,107 @@
 .faucet {
-  height: 80vh;
-  width: 100%;
-  position: relative;
-  &::after {
-    z-index: -1;
-    content: '';
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    position: absolute;
-    background-image: url('../assets/images/Footer.png');
-    background-position: 100% 70%;
-    background-repeat: no-repeat;
-  }
+  padding-top: 30px;
+  min-height: 100vh;
+  text-align: center;
   display: flex;
-  justify-content: center;
   align-items: center;
-  h1 {
-    font-family: 'Poppins-SemiBold';
-    font-size: 45px;
-    color: #f48c57;
-    margin-bottom: 20px;
-  }
-  h4 {
-    font-family: 'Poppins-Medium';
-    color: #3c4760;
-  }
-  .react-select {
-    &__control {
-      margin-top: 30px;
+  justify-content: center;
+  &::after {
+    @include respond-to(sm) {
+      display: none;
     }
-    &__single-value {
-      font-family: 'Poppins-Medium';
-      color: #3c4760;
-    }
+    content: '';
+    position: fixed;
+    left: 200px;
+    bottom: 50px;
+    z-index: -1;
+    right: 0px;
+    height: 400px;
+    transform: rotate(0deg);
+    background-image: url('../assets/images/Footer.png');
+    background-repeat: no-repeat;
+    filter: blur(50px);
   }
-  .react-select__menu {
+  &__card {
+    width: 480px;
+    display: inline-block;
+    border: 1px solid rgba(var(--secondary-border), 0.2);
+    border-radius: 12px;
+    margin-top: 24px;
     text-align: left;
-  }
-  h5 {
-    margin-top: 20px;
-    color: #3c4760;
-    max-width: 800px;
-  }
-  button {
-    border: none;
-    background-color: #0f6eff;
-    color: white;
-    font-family: 'Poppins-Medium';
-    padding: 10px 28px;
-    border-radius: 6px;
-    margin-top: 30px;
+    @include respond-to(sm) {
+      width: 95%;
+    }
+    &__top {
+      padding: 42px;
+      background-color: var(--unnamed-color-1B1E29);
+      border-top-left-radius: 12px;
+      border-top-right-radius: 12px;
+      @include respond-to(sm) {
+        padding: 20px;
+      }
+      h3 {
+        color: var(--unnamed-color-3c4760);
+        font-family: 'Poppins-SemiBold';
+      }
+      h6 {
+        color: var(--unnamed-color-4c646f);
+        font-family: 'Poppins-Regular';
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+      }
+      .submitted {
+        color: var(--unnamed-color-07b127);
+      }
+    }
+    &__bottom {
+      padding: 42px;
+      background: var(--unnamed-color-171A23);
+      border-top: 1px solid rgba(var(--secondary-border), 0.2);
+      border-bottom: 1px solid rgba(var(--secondary-border), 0.2);
+      @include respond-to(sm) {
+        padding: 20px;
+      }
+      .walletBtn {
+        margin-left: 10px;
+        font-family: 'Poppins-Medium';
+        font-size: 14px;
+        padding: 1rem 0.8rem;
+        white-space: nowrap;
+      }
+    }
+    &__footer {
+      padding: 42px;
+      padding-top: 0px;
+      background-color: var(--unnamed-color-1B1E29);
+      border-bottom-left-radius: 12px;
+      border-bottom-right-radius: 12px;
+      display: flex;
+      @include respond-to(sm) {
+        padding: 20px;
+      }
+      .swaptokensBtn {
+        font-family: 'Poppins-Medium';
+        font-size: 15px;
+        padding: 1rem 0rem;
+        width: 100%;
+        &--border {
+          margin-top: 2px;
+          margin-bottom: 2px !important;
+          border: 2px solid #2e5fe2 !important;
+          color: #2e5fe2;
+          background-color: white;
+        }
+      }
+    }
+    img {
+      width: 32px;
+      height: 32px;
+    }
+    label {
+      letter-spacing: -0.14px;
+      color: var(--unnamed-color-4c646f);
+      font-family: 'Poppins-Regular';
+      font-size: 14px;
+    }
   }
 }
