updated filter selection

--- a/src/scss/_customSelect.scss
+++ b/src/scss/_customSelect.scss
@@ -34,7 +34,7 @@
   }
   &__option {
     &:hover {
-      background-color: #a0d4ff;
+      background-color: #ffffff;
     }
   }
   .secondIcon {
