--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -32,6 +32,7 @@
 @import './walletProviderModal';
 @import './customDropdownInput';
 @import './faucet';
+@import './filterSelect';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
