--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -1,6 +1,33 @@
 .tokenpaircard {
   border: 1px solid rgba(var(--secondary-border), 0.2);
   border-radius: 8px;
+  [type='checkbox'].filled-in:not(:checked) + span:not(.lever):after {
+    width: 30px;
+    height: 30px;
+    border: 2px solid rgba(#4c646f, 0.2);
+  }
+  [type='checkbox'].filled-in:checked + span:not(.lever):after {
+    width: 30px;
+    height: 30px;
+    background-color: #e5f7e9;
+    border: 2px solid rgba(#4c646f, 0.2);
+  }
+  [type='checkbox'].filled-in:checked + span:not(.lever):before {
+    left: 2px;
+    width: 12px;
+    height: 21px;
+    border-top: 3px solid transparent;
+    border-left: 3px solid transparent;
+    border-right: 3px solid #07b127;
+    border-bottom: 3px solid #07b127;
+  }
+  [type='checkbox'] + span:not(.lever) {
+    font-family: 'Poppins-Medium';
+    font-size: 14px;
+    padding-top: 3px;
+    color: #3c4760;
+    padding-left: 40px;
+  }
   .insta-buy-lp {
     font-family: 'Poppins-Medium';
     font-size: 15px;
@@ -79,6 +106,9 @@
   &__btnBox {
     margin: 0px;
     padding: 20px 10px;
+    &--checked {
+      background-color: rgba(#e5f7e9, 0.5);
+    }
   }
   &__detailBox {
     &__content {
