--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -33,6 +33,7 @@
 @import './customDropdownInput';
 @import './faucet';
 @import './filterSelect';
+@import './comparingFooter';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
