--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -13,6 +13,12 @@
   top: 0px;
   left: 0px;
   bottom: 0px;
+  &--collapse {
+    width: 120px;
+    &:before {
+      width: 120px !important;
+    }
+  }
 
   @include respond-to(sm) {
     position: absolute;
@@ -43,6 +49,24 @@
     background-color: var(--background);
     // opacity: 0.4;
     border-right: 1px solid var(--unnamed-color-f9fbfe);
+  }
+  &__collapsemenu {
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    bottom: 20px;
+    left: 40px;
+    &:hover {
+      opacity: 0.8;
+    }
+    p {
+      margin-left: 10px;
+      font-family: 'Poppins-Medium';
+      font-size: 14px;
+      color: var(--unnamed-color-4c646f);
+    }
+    // right: 0;
   }
   &__connectedBox {
     position: absolute;
@@ -88,10 +112,13 @@
     }
   }
   .walletBtn {
+    &--collapse {
+      padding: 1rem 1rem;
+    }
     position: absolute;
     margin-left: auto;
     margin-right: auto;
-    bottom: 100px;
+    bottom: 70px;
     left: 35px;
     right: 0;
     text-align: center;
