--- a/src/scss/_amountPanel.scss
+++ b/src/scss/_amountPanel.scss
@@ -57,4 +57,10 @@
       color: var(--unnamed-color-3c4760);
     }
   }
+  .generate {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.9rem 0rem;
+    // width: 90%;
+  }
 }
