--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -34,6 +34,9 @@
 @import './faucet';
 @import './filterSelect';
 @import './comparingFooter';
+@import './compareVaults';
+@import './compareCard';
+@import './compareChart';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
