--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -44,8 +44,13 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
+    img {
+      width: 30px;
+      border-radius: 100%;
+    }
     &-icon {
       margin-left: -10px;
+     
     }
   }
   &__titleBox {
