--- a/src/scss/_customSelect.scss
+++ b/src/scss/_customSelect.scss
@@ -14,6 +14,14 @@
         border: 1px solid rgba(#4c646f, 0.4);
         box-shadow: none;
       }
+      img {
+        width: 30px;
+        height: 30px;
+        border: 1px solid rgba(#4c646f, 0.4);
+        border-radius: 100%; 
+        padding: 2px;
+        background-color: white;
+      }
     }
     &__single-value {
       color: #3c4760;
@@ -33,11 +41,20 @@
     }
   }
   &__option {
+    cursor: pointer;;
     &:hover {
-      background-color: #ffffff;
+      opacity: 0.8;
+    }
+    img {
+      width: 30px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
     }
   }
   .secondIcon {
-    margin-left: -8px;
+    margin-left: -10px;
+    border-radius: 100%;
   }
 }
