--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -45,12 +45,20 @@
     display: flex;
     justify-content: space-between;
     img {
-      width: 30px;
-      border-radius: 100%;
+      width: 40px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
     }
     &-icon {
       margin-left: -10px;
      
+    }
+    .highRisk {
+      width: 25px;
+      border: none;
+      border-radius: 0%;
     }
   }
   &__titleBox {
