fixed lock-vault Modal

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -37,6 +37,7 @@
 @import './compareVaults';
 @import './compareCard';
 @import './compareChart';
+@import './comingsoon';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
