--- a/src/scss/_lockvaultmodal.scss
+++ b/src/scss/_lockvaultmodal.scss
@@ -51,8 +51,21 @@
         opacity: 0.8;
       }
     }
-    &-icon {
+
+    &-icon1 {
+      width: 40px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
+    }
+    &-icon2 {
+      width: 40px;
       margin-left: -10px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
     }
   }
   &__body {
