--- a/src/scss/_comingsoon.scss
+++ b/src/scss/_comingsoon.scss
@@ -12,8 +12,10 @@
         text-align: center;
         transform: translateY(-50%);
     }
-    
-    & > div {
-        filter: blur(10px);
+    &__enable {
+        & > div {
+            filter: blur(10px);
+        }
     }
+    
 }
