added coming soon

--- a/src/scss/_comingsoon.scss
+++ b/src/scss/_comingsoon.scss
@@ -16,6 +16,9 @@
         & > div {
             filter: blur(10px);
         }
+        & > table {
+            filter: blur(10px);
+        }
     }
     
 }
