--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -38,6 +38,7 @@
 @import './compareCard';
 @import './compareChart';
 @import './comingsoon';
+@import './adminpanel';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
