--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -67,6 +67,9 @@
       font-family: 'Poppins-SemiBold';
       font-size: 1rem;
       color: var(--unnamed-color-002332);
+      &:hover {
+        opacity: 0.8;
+      }
     }
     p {
       font-family: 'Poppins-Regular';
