--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -67,8 +67,10 @@
       font-family: 'Poppins-SemiBold';
       font-size: 1rem;
       color: var(--unnamed-color-002332);
+      cursor: pointer;
       &:hover {
         opacity: 0.8;
+        text-decoration: underline;
       }
     }
     p {
