--- a/src/scss/_pricecard.scss
+++ b/src/scss/_pricecard.scss
@@ -6,6 +6,15 @@
   }
   &__header {
     padding: 1.5rem;
+    label {
+      font-size: 14px;
+      color: var(--unnamed-color-4c646f);
+    }
+    p {
+      font-family: 'Poppins-SemiBold';
+      font-size: 16px;
+      color: var(--unnamed-color-4c646f);
+    }
   }
 
   &__title {
