--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -41,9 +41,10 @@
       }
     }
     &_rightBox {
+      // margin-bottom: 50px;
       border-top: 1px solid var(--unnamed-color-f9fbfe);
       border-bottom: 1px solid var(--unnamed-color-f9fbfe);
-      width: 40%;
+      width: 20%;
       display: flex;
       @include respond-to(sm) {
         width: 100%;
@@ -60,7 +61,7 @@
       }
     }
     &_vaultdebtBox {
-      width: 50%;
+      width: 100%;
       background-color: var(--unnamed-color-f8f9f9);
       display: flex;
       align-items: center;
@@ -82,6 +83,7 @@
     }
   }
   &__bodyright {
+    margin-bottom: 50px;
     padding: 0px 0px !important;
     margin-top: 2rem;
     border: 1px solid rgba(#214769, 0.2);
