--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -74,6 +74,8 @@
   }
   &__bodyleft {
     padding: 2rem 5rem !important;
+    padding-right: 1rem !important;
+    padding-left: 3rem !important;
     @include respond-to(sm) {
       padding: 2rem 0rem !important;
       .col-sm-12 {
