--- a/src/scss/_activePairCard.scss
+++ b/src/scss/_activePairCard.scss
@@ -22,7 +22,19 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    &-icon {
+    &-icon0 {
+      width: 40px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
+    }
+    &-icon1 {
+      width: 40px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
       margin-left: -10px;
     }
   }
