--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -53,4 +53,41 @@
       margin-left: 120px;
     }
   }
+  &__empty {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    img {
+      width: 400px;
+    }
+    h4 {
+      font-size: 18px;
+      font-family: 'Poppins-Medium';
+      color: var(--unnamed-color-3c4760);
+    }
+    h6 {
+      font-size: 14px;
+      font-family: 'Poppins-Regular';
+      color: var(--unnamed-color-002332);
+    }
+  }
+  &__social {
+    display: flex;
+    justify-content:center;
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
+      border: 1px solid rgba(var(--secondary-border), 0.3);
+      border-radius: 8px;
+      margin-bottom: 0px;
+      img {
+        width: 30px;
+      }
+    }
+  }
 }
