--- a/src/scss/_vaultdebt.scss
+++ b/src/scss/_vaultdebt.scss
@@ -1,6 +1,7 @@
 .vaultdebt {
   .paybackusdr {
-    margin-top: 16px;
+    min-width: 130px;
+    margin-bottom: 16px;
     font-family: 'Poppins-Medium';
     font-size: 15px;
     padding: 0.8rem 1.1rem;
