--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -48,4 +48,9 @@
       border: 0px;
     }
   }
+  &--valid {
+    font-family: 'Poppins-Regular';
+    color: #ff3131;
+    font-size: 14px;
+  }
 }
