--- a/src/scss/_modalCard.scss
+++ b/src/scss/_modalCard.scss
@@ -50,8 +50,10 @@
     &_tokenName {
       margin-left: 10px;
       p {
-        font-size: 14px;
+        margin-top: 10px;
+        font-size: 16px;
         color: var(--unnamed-color-4c646f);
+        font-family: 'Poppins-SemiBold';
       }
       h6 {
         font-family: 'Poppins-SemiBold';
