--- a/src/scss/_dashboardModal.scss
+++ b/src/scss/_dashboardModal.scss
@@ -27,6 +27,10 @@
       img {
         width: 48px;
         height: 48px;
+        border: 1px solid rgba(#4c646f, 0.4);
+        border-radius: 100%; 
+        padding: 2px;
+        background-color: white;
       }
       h4 {
         font-family: 'Poppins-SemiBold';
