--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -117,6 +117,12 @@
       margin-bottom: 0px;
       font-family: 'Poppins-Medium';
     }
+    h5 {
+      font-size: 14px;
+      color: var(--unnamed-color-3c4760);
+      margin-bottom: 0px;
+      font-family: 'Poppins-Regular';
+    }
     .semiBold {
       font-family: 'Poppins-SemiBold';
     }
