enter-vault and separate modal

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -39,6 +39,7 @@
 @import './compareChart';
 @import './comingsoon';
 @import './adminpanel';
+@import './guidemodal';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
