--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,6 +3,7 @@
   padding-bottom: 1rem;
   padding-right: 4rem;
   justify-content: flex-end;
+  align-items: center;
   background-color: var(--background);
   @include respond-to(sm) {
     padding-top: 2rem;
