--- a/src/scss/_guidemodal.scss
+++ b/src/scss/_guidemodal.scss
@@ -5,4 +5,81 @@
         padding: 0.8rem 2rem;
         margin-right: 1rem;
     }
+    &__header {
+        width: 100%;
+        padding: 20px;
+        padding-bottom: 0px;
+        position: relative;
+        img {
+          width: 48px;
+          height: 48px;
+        }
+        h3 {
+          font-family: 'Poppins-SemiBold';
+          font-size: 24px;
+          margin-top: 16px;
+          color: #3c4760;
+        }
+        &-close {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+          cursor: pointer;
+          color: #002332;
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+        &-icon {
+          margin-left: -10px;
+        }
+      }
+      &__title {
+        padding-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-family: 'Poppins-SemiBold';
+        font-size: 24px;
+        color: #3c4760;
+      }
+      &__body {
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-family: 'Poppins-Regular';
+        color: var(--unnamed-color-171A23);
+        strong {
+          color: #ff3131;
+        }
+        p {
+            line-height: 2.1rem;
+            font-size: 16px;
+        }
+        h6 {
+            margin-top: 20px;
+            font-size: 14px;
+            font-family: 'Poppins-Light';
+            color: var(--unnamed-color-4c646f);
+        }
+      }
+      &__btnBox {
+        margin: 0px;
+        padding: 20px 0px;
+        display: flex;
+        .gradientBtn {
+          width: 100%;
+          padding: 12px 20px;
+          font-family: 'Poppins-Medium';
+          font-size: 16px;
+          color: #0f6eff;
+          border: 2px solid #0f6eff;
+          letter-spacing:1px;
+        }
+        .generate {
+          font-family: 'Poppins-Medium';
+          font-size: 15px;
+          padding: 0.9rem 0rem;
+          width: 100%;
+        }
+      }
 }
