--- a/src/scss/_guidemodal.scss
+++ b/src/scss/_guidemodal.scss
@@ -36,7 +36,7 @@
       }
       &__title {
         padding-top: 20px;
-        padding-left: 10px;
+        // padding-left: 10px;
         padding-right: 10px;
         font-family: 'Poppins-SemiBold';
         font-size: 24px;
