--- a/src/scss/_guidemodal.scss
+++ b/src/scss/_guidemodal.scss
@@ -36,7 +36,7 @@
       }
       &__title {
         padding-top: 20px;
-        // padding-left: 10px;
+        padding-left: 10px;
         padding-right: 10px;
         font-family: 'Poppins-SemiBold';
         font-size: 24px;
@@ -56,8 +56,9 @@
             font-size: 16px;
         }
         h6 {
+            margin-top: 20px;
             font-size: 14px;
-            font-family: 'Poppins-Regular';
+            font-family: 'Poppins-Light';
             color: var(--unnamed-color-4c646f);
         }
       }
