--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -50,7 +50,8 @@
     margin-left: 300px;
     min-height: 100vh;
     &--collapse {
-      margin-left: 120px;
+      // margin-left: 120px;
+      margin-left: 0px;
     }
   }
   &__empty {
