--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -6,8 +6,12 @@
     justify-content:center;
     align-items:center;
     font-family: 'Poppins-Medium';
-    font-size: 25px;
+    font-size: 17px;
     color: var(--unnamed-color-002332);
+    text-align: center;
+    p {
+      margin-top: 20px;
+    }
   }
   overflow-y: hidden;
 
@@ -60,7 +64,9 @@
     margin-left: 300px;
     min-height: 100vh;
     &--collapse {
-      // margin-left: 120px;
+      margin-left: 120px;
+    }
+    &--empty {
       margin-left: 0px;
     }
   }
