--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -32,7 +32,17 @@
   .generate {
     font-family: 'Poppins-Medium';
     font-size: 15px;
-    padding: 0.9rem 0rem;
+    padding: 0.9rem 1rem;
     width: 100%;
   }
+  &__table {
+    margin-top: 20px;
+    width: 1px;
+    th {
+      border-top: 0px !important;
+      padding-top: 1.5rem !important;
+      padding-bottom: 1.5rem !important;
+    }
+  }
+  
 }
