--- a/src/scss/_faucet.scss
+++ b/src/scss/_faucet.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--background);
   &::after {
     @include respond-to(sm) {
       display: none;
