fixed list view width

--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -38,6 +38,7 @@
   &__table {
     margin-top: 20px;
     width: 1px;
+    width: 100% !important;
     th {
       border-top: 0px !important;
       padding-top: 1.5rem !important;
