--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -197,3 +197,16 @@ input {
 .LOW {
   color: #07b127 !important;
 }
+
+.DDD {
+  color: #ff3131 !important;
+}
+.DD {
+  color: #ff3131 !important;
+}
+.AA {
+  color: #f48c57 !important;
+}
+.AAA {
+  color: #07b127 !important;
+}
