--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -43,6 +43,11 @@
       border-top: 0px !important;
       padding-top: 1.5rem !important;
       padding-bottom: 1.5rem !important;
+      font-family: 'Poppins-Regular';
+      font-size: 0.9rem;
+    }
+    &--action {
+      width: 15rem;
     }
   }
   
