--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -11,7 +11,9 @@
     background-color: transparent;
   }
   &--fill {
-    background-image: url('../assets/images/btn-bg.svg');
+    // background-image: url('../assets/images/btn-bg.svg');
+    background: transparent linear-gradient(90deg, #ff69ce 0%, #bc5cf7 100%) 0% 0% no-repeat padding-box;
+    opacity: 1;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -19,7 +21,7 @@
       opacity: 0.8;
     }
     &:focus {
-      background-image: url('../assets/images/btn-bg.svg');
+      background: transparent linear-gradient(90deg, #ff69ce 0%, #bc5cf7 100%) 0% 0% no-repeat padding-box;
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -30,10 +32,10 @@
     background-clip: padding-box;
     border: solid 2px transparent;
     border-radius: 10px;
-    color: #0f6eff;
+    color: #bc5cf7;
     background-color: white;
     &:focus {
-      color: #0f6eff;
+      color: #bc5cf7;
       background-color: white;
     }
     &:before {
@@ -46,7 +48,7 @@
       z-index: -1;
       margin: -2px; /* !importanté */
       border-radius: inherit; /* !importanté */
-      background: linear-gradient(to bottom, #5fb5ff, #0f6eff);
+      background: linear-gradient(90deg, #ff69ce 0%, #bc5cf7 100%) 0% 0% no-repeat padding-box;
     }
   }
   &--danger {
