fixed buttons width

--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -33,7 +33,7 @@
     font-family: 'Poppins-Medium';
     font-size: 15px;
     padding: 0.9rem 3rem;
-    min-width: 200px;
+    // min-width: 200px;
     // width: 100%;
   }
   &__table {
