Add styles for max value

--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -19,6 +19,10 @@
     border-bottom-right-radius: 4px !important;
     // font-weight: bold;
   }
+  .withMax {
+    font-style: italic;
+    color: gray;
+  }
   .tokenName {
     position: relative;
     right: 0px;
