--- a/src/scss/_navbarItem.scss
+++ b/src/scss/_navbarItem.scss
@@ -22,4 +22,36 @@
       opacity: 1;
     }
   }
+  &__expand {
+    padding-bottom: 0.5rem;
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    margin-left: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-left: 2px solid var(--unnamed-color-bg);
+    &-name {
+      font-family: 'Poppins-SemiBold';
+      font-size: 0.75rem;
+      color: var(--unnamed-color-3C4760);
+    }
+    &-positionvalue {
+      font-family: 'Poppins-Bold';
+      font-size: 0.75rem;
+      color: var(--unnamed-color-f48c57);
+      padding: 2px 8px;
+      background-color: rgba( #f48c57, 0.3 );
+      border-radius: 2rem;
+      margin-left: 2rem;
+    }
+    &-rewardsearned {
+      font-family: 'Poppins-Bold';
+      font-size: 0.75rem;
+      color: var(--unnamed-color-5fb5ff);
+      padding: 2px 8px;
+      background-color: rgba( #5fb5ff, 0.3 );
+      border-radius: 2rem;
+    }
+  }
 }
