--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -45,6 +45,7 @@
 @import './vaultSetupContainer';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
+@include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
 @include font-face('Poppins-Medium', '../assets/fonts/Poppins-Medium');
 @include font-face('Poppins-Regular', '../assets/fonts/Poppins-Regular');
