--- a/src/scss/_navbarItem.scss
+++ b/src/scss/_navbarItem.scss
@@ -43,7 +43,7 @@
       padding: 2px 8px;
       background-color: rgba( #f48c57, 0.3 );
       border-radius: 2rem;
-      margin-left: 2rem;
+      margin-right: 0.5rem;
     }
     &-rewardsearned {
       font-family: 'Poppins-Bold';
