--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -48,7 +48,7 @@
       font-family: 'Poppins-Medium';
       font-size: 15px;
       color: white;
-      background-image: linear-gradient(to bottom, #5fb5ff, #0f6eff);
+      background: linear-gradient(90deg, #ff69ce 0%, #bc5cf7 100%) 0% 0% no-repeat padding-box;
       border: 0px;
     }
   }
