--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -57,7 +57,7 @@
     }
   }
   &__titleBox {
-    margin-left: 1rem;
+    margin-top: 1rem;
     h6 {
       font-family: 'Poppins-SemiBold';
       font-size: 1rem;
