--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -9,6 +9,7 @@
       border-top: 1px solid var(--unnamed-color-f9fbfe);
       border-bottom: 1px solid var(--unnamed-color-f9fbfe);
       display: flex;
+      // justify-content: space-between;
       padding: 3rem 5rem !important;
       width: 80%;
       @include respond-to(sm) {
@@ -45,8 +46,23 @@
       border-bottom: 1px solid var(--unnamed-color-f9fbfe);
       width: 20%;
       display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      padding-right: 5rem;
       @include respond-to(sm) {
         width: 100%;
+      }
+      a {
+        display: block;
+        color: var(--unnamed-color-4c646f);
+        text-align: right;
+        &:hover {
+          color: var(--unnamed-color-4c646f);
+        }
+        @include respond-to(sm) {
+          text-align: left;
+          margin-bottom: 12px;
+        }
       }
     }
     &_speedometerBox {
