--- a/src/scss/_errorPage.scss
+++ b/src/scss/_errorPage.scss
@@ -77,6 +77,7 @@
         align-self: flex-start;
         min-height: 40px;
         padding: 0px 15px;
+        margin-top: 10px;
       }
   }
 }
