--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -43,6 +43,7 @@
 @import './vaultSetup';
 @import './vaulthistoryCard';
 @import './vaultSetupContainer';
+@import './breadcrumb';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
