--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -8,7 +8,7 @@
     &_titleBox {
       border-top: 1px solid var(--unnamed-color-f9fbfe);
       border-bottom: 1px solid var(--unnamed-color-f9fbfe);
-      display: flex;
+      // display: flex;
       padding: 3rem 5rem !important;
       width: 80%;
       @include respond-to(sm) {
